--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -27,6 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/instructions_text_view"
+        android:progressDrawable="@drawable/circular_progress_bar"
         android:visibility="invisible"
         style="?android:attr/progressBarStyleLarge"
         android:layout_centerHorizontal="true"/>
